Fixed Gray theme on IE.

--- a/Gray/Syntax Highlighter/style.scss
+++ b/Gray/Syntax Highlighter/style.scss
@@ -26,6 +26,8 @@ $code_color3:                   #ff0000 !default;
 .syntaxhighlighter {
     border: 1px solid #8b8b8b !important;
 
+    overflow: auto !important;
+
     border-radius: 1.2em;
     -webkit-border-radius: 1.2em;
     -moz-border-radius: 1.2em;
